--- a/Heart_Disease_Prediction.ipynb
+++ b/Heart_Disease_Prediction.ipynb
@@ -509,8 +509,8 @@
     "    * 2 = Atypical angina\n",
     "    * 3 = Non-anginal pain\n",
     "    * 4 = Asymptomatic\n",
-    "* trestbps: int (resting blood pressure in mmHg)\n",
-    "* chol: int (serum cholesterol in mg/dl)\n",
+    "* trestbps: continuous (resting blood pressure in mmHg)\n",
+    "* chol: continuous (serum cholesterol in mg/dl)\n",
     "* fbs: category (fasting blood sugar > 120mg/dl)\n",
     "    * 0 = False\n",
     "    * 1 = True\n",
@@ -518,11 +518,11 @@
     "    * 0 = Normal\n",
     "    * 1 = Having ST-T wave abnormality\n",
     "    * 2 = Showing probable or definite left ventricular hypertrophy by Estes' criteria\n",
-    "* thalach: int (maximum heart rate achieved)\n",
+    "* thalach: continuous (maximum heart rate achieved)\n",
     "* exang: category (exercise induced angina)\n",
     "    * 0 = No\n",
     "    * 1 = Yes\n",
-    "* oldpeak: int (ST depression induced by exercise relative to rest)\n",
+    "* oldpeak: continuous (ST depression induced by exercise relative to rest)\n",
     "* slope: category (the slope of the peak exercise ST segment)\n",
     "    * 1 = Upsloping\n",
     "    * 2 = Flat\n",
